--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "auth:crea": "tsx scripts/save-crea-auth.ts",
+    "test:civic-hall": "tsx scripts/test-civic-hall.ts",
+    "test:crea": "tsx scripts/test-crea.ts"
   },
   "dependencies": {
     "cheerio": "^1.1.2",
+    "dotenv": "^17.2.3",
     "next": "16.1.4",
     "playwright": "^1.57.0",
     "react": "19.2.3",
