Vercel + Render APIのハイブリッド構成に変更
Vercel環境でChromiumが動作しないため、以下の構成に変更:

【Vercel】
- フロントエンド
- BUZZスタジオのスクレイピング（cheerioベース）

【Render API】
- 福岡市民会館のスクレイピング（Playwright）
- CREAのスクレイピング（Playwright）

主な変更:
- api/server.ts: Render用スタンドアロンAPIサーバーを新規作成
- route.ts: 市民会館/CREAはRender APIに委譲するよう変更
- スクレイパーをPlaywrightに戻す（Renderで使用）
- render.yaml: APIサーバー用に設定更新
- browser.ts削除（不要になったため）

デプロイ手順:
1. Vercel: 自動デプロイ（環境変数RENDER_API_URLを設定）
2. Render: render.yamlでデプロイ（環境変数CREA_AUTH_JSONを設定）

--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,17 @@
+# Render設定ファイル
+# スクレイピングAPIサーバー（Playwright使用）
+
 services:
   - type: web
-    name: studio-check
+    name: studio-check-api
     env: node
     region: oregon
     plan: free
-    buildCommand: npm install && npx playwright install chromium && npm run build
-    startCommand: npm start
+    buildCommand: npm install && npx playwright install chromium --with-deps
+    startCommand: npm run api:start
+    healthCheckPath: /health
     envVars:
       - key: NODE_ENV
         value: production
-      - key: CREA_AUTH_STATE
-        sync: false  # Set this manually in Render Dashboard
+      - key: CREA_AUTH_JSON
+        sync: false  # Renderダッシュボードで手動設定
