--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "api:start": "tsx api/server.ts",
+    "api:dev": "tsx watch api/server.ts",
     "auth:crea": "tsx scripts/save-crea-auth.ts",
     "auth:export": "bash scripts/export-auth-env.sh",
     "test:civic-hall": "tsx scripts/test-civic-hall.ts",
@@ -15,11 +17,10 @@
     "test:auth": "tsx scripts/test-env-auth.ts"
   },
   "dependencies": {
-    "@sparticuz/chromium": "^131.0.0",
     "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
     "next": "16.1.4",
-    "puppeteer-core": "^24.0.0",
+    "playwright": "^1.57.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
@@ -31,7 +32,6 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
-    "playwright": "^1.57.0",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "typescript": "^5"
