Dockerfileを追加してRenderビルドエラーを修正
Renderの無料プランではroot権限がないため、playwright install --with-depsが失敗。
Playwright公式Dockerイメージを使用することで、必要な依存関係を含めてデプロイ。

変更:
- Dockerfile: Playwright公式イメージベースで作成
- render.yaml: runtime を docker に変更
- .dockerignore: 不要ファイルを除外

--- a/render.yaml
+++ b/render.yaml
@@ -4,11 +4,9 @@
 services:
   - type: web
     name: studio-check-api
-    env: node
+    runtime: docker
     region: oregon
     plan: free
-    buildCommand: npm install && npx playwright install chromium --with-deps
-    startCommand: npm run api:start
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
