Renderの使用を中止

--- a/package.json
+++ b/package.json
@@ -7,18 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "api:start": "tsx api/server.ts",
-    "api:dev": "tsx watch api/server.ts",
-    "auth:crea": "tsx scripts/save-crea-auth.ts",
-    "auth:export": "bash scripts/export-auth-env.sh",
     "test:civic-hall": "tsx scripts/test-civic-hall.ts",
-    "test:crea": "tsx scripts/test-crea.ts",
-    "test:parallel": "tsx scripts/test-parallel.ts",
-    "test:auth": "tsx scripts/test-env-auth.ts"
+    "test:crea": "tsx scripts/test-crea.ts"
   },
   "dependencies": {
     "cheerio": "^1.1.2",
-    "dotenv": "^17.2.3",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -33,7 +26,6 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
-    "playwright": "^1.57.0",
     "tailwindcss": "^4"
   }
 }
